[project]
name = "Helloservice"
version = "1.0.0"
description = "simple description"
authors = [
    {name = "Randula",email = "xrandula@mendelu.cz"},
]
dependencies = [
    "fastapi>=0.103.2",
    "uvicorn[standard]>=0.23.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

